tests/baselines/reference/stringLiteralTypesInUnionTypes04(strict=true).errors.txt
stringLiteralTypesInUnionTypes04.ts(3,5): error TS2322: Type 'undefined' is not assignable to type 'T'.
stringLiteralTypesInUnionTypes04.ts(4,5): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== stringLiteralTypesInUnionTypes04.ts (2 errors) ====
    type T = "" | "foo";
    
    let x: T = undefined;
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    let y: T = undefined;
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    
    if (x === "") {
        let a = x;
    }
    
    if (x !== "") {
        let b = x;
    }
    
    if (x == "") {
        let c = x;
    }
    
    if (x != "") {
        let d = x;
    }
    
    if (x) {
        let e = x;
    }
    
    if (!x) {
        let f = x;
    }
    
    if (!!x) {
        let g = x;
    }
    
    if (!!!x) {
        let h = x;
    }